--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ jobs:
       - image: cimg/node:17.8.0
     steps:
       - checkout
+      - run: 
+          name: Install reqd packages
+          command: sudo apt-get update && sudo apt-get install libc
       - run:
           name: Grab and install cc65
           command: mkdir tools/cc65 && cd tools/cc65 && wget https://gde-files.nes.science/cc65-2.19-linux.zip && unzip cc65-2.19-linux.zip
