Automate ips patching

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ tools/sprite_def2img/src/node_modules
 tools/chr2img/*.exe
 tools/chr2img/src/node_modules
 !tools/zip_readme
-!tools/patcher
+!tools/fips
+tools/fips/*
+!tools/fips/README.md
 graphics/generated/*.png
 graphics/generated/*.bmp
 graphics/unused/*
