--- a/tools/cc65_config/game.cfg
+++ b/tools/cc65_config/game.cfg
@@ -3,6 +3,7 @@ MEMORY {
     ZP: 		start = $0000, size = $0100, type = rw, define = yes;
     HEADER:		start = $0000, size = $0010, file = %O ,fill = yes;
 	PRG:		start = $8000, size = $7c00, file = %O, fill = yes, define = no;
+    # FIXME: RESIZE WHEN WE RUN OUT OF SPACE
     DMC: 		start = $fc00, size = $03f0, file = %O, fill = yes, define = yes;
     PRG_STUB:   start = $fff0, size = $0010, file = %O, fill = yes, define = no;
     CHR_00:		start = $0000, size = $1000, file = %O, fill = yes;
