--- a/tools/cc65_config/game.cfg
+++ b/tools/cc65_config/game.cfg
@@ -2,9 +2,9 @@ MEMORY {
 
     ZP: 		start = $0000, size = $0100, type = rw, define = yes;
     HEADER:		start = $0000, size = $0010, file = %O ,fill = yes;
-	PRG:		start = $8000, size = $7df0, file = %O, fill = yes, define = no;
+	PRG:		start = $8000, size = $7ef0, file = %O, fill = yes, define = no;
     # FIXME: RESIZE WHEN WE RUN OUT OF SPACE
-    DMC: 		start = $fdf0, size = $0200, file = %O, fill = yes, define = yes;
+    DMC: 		start = $fef0, size = $0100, file = %O, fill = yes, define = yes;
     PRG_STUB:   start = $fff0, size = $0010, file = %O, fill = yes, define = no;
     CHR_00:		start = $0000, size = $1000, file = %O, fill = yes;
 	CHR_01:		start = $0000, size = $1000, file = %O, fill = yes;
